# ai-ranger

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  METHODOLOGY.md  Makefile  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  provider_request.md
.github/workflows/: ci.yml  code-review.yml  release.yml
agent/: BROWSER-DETECTION-OPTIONS.md  Cargo.toml  Makefile  build.rs  config.toml
agent/src/: config.rs  dedup.rs  event.rs  main.rs  pipeline.rs  proto.rs  service.rs
agent/src/buffer/: drain.rs  mod.rs  store.rs
agent/src/capture/: constants.rs  dns.rs  etw_dns.rs  mod.rs  pcap.rs  sni.rs
agent/src/capture/mitm/: mod.rs
agent/src/classifier/: mod.rs  providers.rs
agent/src/identity/: config.rs  enroll.rs  mod.rs
agent/src/output/: fanout.rs  file.rs  http.rs  mod.rs  sink.rs  stdout.rs  webhook.rs
agent/src/process/: mod.rs
dashboard/: Dockerfile  Makefile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/__tests__/: PaginationBar.test.tsx
dashboard/src/components/: ProviderIcon.tsx  TimeRangeSelector.tsx
dashboard/src/hooks/: use-auth.tsx  use-dashboard.ts  use-events.ts  use-time-range.tsx
dashboard/src/layouts/: DashboardLayout.tsx
docker/: Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/clickhouse/: init.sql
docker/nginx/: nginx.dev.conf  nginx.prod.conf
docker/rabbitmq/: definitions.json  definitions.json.template  docker-entrypoint.sh  rabbitmq.conf
gateway/: Dockerfile  Makefile  alembic.ini  config.py  constants.py  database.py  dependencies.py  main.py  proto_utils.py  rabbitmq.py  requirements.txt
gateway/alembic/: env.py
gateway/models/: __init__.py  agent.py  base.py  known_provider.py  org.py  org_settings.py  token.py
gateway/routers/: enroll.py  health.py  ingest.py  providers.py
gateway/tests/: test_rabbitmq.py
k8s/: README.md
proto/: Makefile
providers/: CONTRIBUTING.md  providers.toml
scripts/install/: linux.sh  macos.sh  windows.ps1
scripts/install-deps/: linux.sh  macos.sh  windows.ps1
scripts/lib/: download.sh
scripts/update/: linux.sh  macos.sh  windows.ps1
tests/: README.md  run-integration.sh
tests/integration/: conftest.py  requirements.txt  test_alerting.py  test_dashboard.py  test_enrollment.py  test_events.py  test_health.py  test_ingest_real_agent.py  test_ingest_synthetic.py  test_pipeline.py  test_process_attribution.py
workers/: Dockerfile  Dockerfile.dev  Makefile  go.mod  go.sum
(+57 files in other folders)
